--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -509,7 +509,7 @@ h6,
   text-align: center;
 }
 #msg-box4-1t H3 {
-  color: #f3c649;
+  color: #000000;
 }
 #features4-t .card-subtitle {
   color: #bcbcbc;
