--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -444,19 +444,19 @@ h6,
 }
 #ext_menu-0 .link[aria-expanded="true"],
 #ext_menu-0 .dropdown-menu {
-  background: #0e0e0e;
+  background: #000000;
 }
 #ext_menu-0 .nav-dropdown-sm .link:focus,
 #ext_menu-0 .nav-dropdown-sm .link:hover,
 #ext_menu-0 .nav-dropdown-sm .dropdown-item:focus,
 #ext_menu-0 .nav-dropdown-sm .dropdown-item:hover {
-  background: #202020!important;
+  background: #000000!important;
 }
 #ext_menu-0 .navbar,
 #ext_menu-0 .nav-dropdown-sm,
 #ext_menu-0 .nav-dropdown-sm .link[aria-expanded="true"],
 #ext_menu-0 .nav-dropdown-sm .dropdown-menu {
-  background: #282828;
+  background: #000000;
 }
 #ext_menu-0 .bg-color.transparent .link {
   color: #ffffff;
@@ -493,12 +493,12 @@ h6,
 #header5-z .mbr-section-title {
   color: #b8312f;
   font-size: 48px;
-  text-align: left;
+  text-align: center;
 }
 #header5-z .mbr-section-lead {
   color: #000000;
   font-size: 30px;
-  text-align: left;
+  text-align: center;
 }
 #features3-i P {
   text-align: center;
