--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -493,6 +493,16 @@ h6,
 #header3-12 H3 {
   font-size: 36px;
 }
+#header3-20 .mbr-section-title,
+#header3-20 .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-20 H3 {
+  color: #f7da64;
+}
+#header3-20 SMALL {
+  color: #ffffff;
+}
 #header5-z .mbr-section-title {
   color: #b8312f;
   font-size: 48px;
