create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -942,12 +942,11 @@ h6,
   color: #ffffff;
   font-size: 14px;
 }
-#header6-24 .mbr-section-title {
+#header6-2h .mbr-section-title {
   color: #28262b;
 }
-#header6-24 .mbr-section-text {
-  color: #000000;
-  font-size: 20px;
+#header6-2h .mbr-section-text {
+  color: #565656;
 }
 #ext_menu-25 .hide-buttons .nav-btn {
   display: none !important;
