--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -726,6 +726,14 @@ h6,
 #header6-x .mbr-section-text {
   color: #000000;
 }
+#header3-2o .mbr-section-title,
+#header3-2o .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-2o SMALL {
+  color: #000000;
+  font-size: 20px;
+}
 #header6-2m .mbr-section-title {
   color: #28262b;
 }
