--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1204,6 +1204,9 @@ h6,
 #header3-2r SMALL {
   color: #000000;
 }
+#header3-2r H3 {
+  font-size: 60px;
+}
 #header3-2s .mbr-section-title,
 #header3-2s .mbr-section-subtitle {
   text-align: center;
