create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1216,7 +1216,7 @@ h6,
 }
 #header3-2s H3 {
   font-size: 36px;
-  color: #b8312f;
+  color: #ffffff;
 }
 #header3-2t .mbr-section-title,
 #header3-2t .mbr-section-subtitle {
@@ -1229,7 +1229,7 @@ h6,
 #header3-2t H3 {
   text-align: right;
   font-size: 36px;
-  color: #b8312f;
+  color: #ffffff;
 }
 #content2-2v BLOCKQUOTE {
   color: #000000;
@@ -1243,5 +1243,5 @@ h6,
 }
 #header3-2u H3 {
   font-size: 36px;
-  color: #b8312f;
+  color: #ffffff;
 }
