create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1206,6 +1206,7 @@ h6,
 }
 #header3-2r H3 {
   font-size: 60px;
+  color: #f28281;
 }
 #header3-2s .mbr-section-title,
 #header3-2s .mbr-section-subtitle {
