--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -731,8 +731,11 @@ h6,
   text-align: center;
 }
 #header3-2o SMALL {
-  color: #000000;
-  font-size: 20px;
+  color: #f7da64;
+  font-size: 30px;
+}
+#header3-2o H3 {
+  color: #ffffff;
 }
 #header6-2m .mbr-section-title {
   color: #28262b;
