--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -518,6 +518,12 @@ h6,
 #msg-box4-1t H3 {
   color: #000000;
 }
+#msg-box5-4l P {
+  color: #000000;
+}
+#msg-box5-4l H3 {
+  color: #ffffff;
+}
 #header3-1x .mbr-section-title,
 #header3-1x .mbr-section-subtitle {
   text-align: center;
