--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,6 +1,7 @@
-@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=Lora:400,700);
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
+
 
 
 
@@ -520,6 +521,8 @@ h6,
 }
 #msg-box5-4l P {
   color: #000000;
+  font-family: 'Lora', serif;
+  font-size: 18px;
 }
 #msg-box5-4l H3 {
   color: #ffffff;
